--- a/presentation/style.css
+++ b/presentation/style.css
@@ -14,6 +14,8 @@ h4, a {
 
 .remark-code, .remark-inline-code {
     font-family: 'Ubuntu Mono';
+    color: black;
+    background-color: white !important;
 }
 
 .inverse {
